specs-dev/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fn-get-activity-type-vs
  namespace: fission
spec:
  hosts:
    - dev.api.siga.me
  gateways:
    - develop/dev-istio-gateway
  http:
  - match:
    - uri:
        prefix: /router/enum/activity_type
    rewrite:
      uri: /enum/activity_type
    route:
    - destination:
        host: router.fission.svc.cluster.local
        port:
          number: 80
